--- a/.gitignore
+++ b/.gitignore
@@ -5929,3 +5929,5 @@
 .scannerwork/css-bundle/package/yarn.lock
 .scannerwork/css-bundle/stylelintconfig.json
 .scannerwork/report-task.txt
+/build/
+/dist/
