--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JavaFX.classpath}
+    ${libs.JavaFX11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,7 +88,7 @@ run.classpath=\
 run.jvmargs=--module-path C:\\Users\\josue\\Desktop\\javafx-sdk-11.0.2\\lib --add-modules javafx.controls,javafx.media
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JavaFX.classpath}
+    ${libs.JavaFX11.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
